@@ -1,12 +1,24 @@
-FROM gradle:latest AS BUILD_STAGE
-WORKDIR /tmp
-COPY gradle gradle
-COPY build.gradle.kts gradle.properties settings.gradle.kts gradlew ./
-COPY src src
-RUN ./gradlew --no-daemon buildFatJar
+# Stage 1: Cache Gradle dependencies
+FROM gradle:latest AS cache
+RUN mkdir -p /home/gradle/cache_home
+ENV GRADLE_USER_HOME=/home/gradle/cache_home
+COPY build.gradle.* gradle.properties /home/gradle/app/
+COPY gradle /home/gradle/app/gradle
+WORKDIR /home/gradle/app
+RUN gradle clean build -i --stacktrace
 
-FROM openjdk:17-jdk-slim
-EXPOSE 8080:8080
+# Stage 2: Build Application
+FROM gradle:latest AS build
+COPY --from=cache /home/gradle/cache_home /home/gradle/.gradle
+COPY --chown=gradle:gradle . /home/gradle/src
+WORKDIR /home/gradle/src
+# Build the fat JAR, Gradle also supports shadow
+# and boot JAR by default.
+RUN gradle buildFatJar --no-daemon
+
+# Stage 3: Create the Runtime Image
+FROM amazoncorretto:22 AS runtime
+EXPOSE 8080
 RUN mkdir /app
-COPY --from=BUILD_STAGE /tmp/build/libs/*-all.jar /app/ktor-server.jar
-ENTRYPOINT ["java","-Xlog:gc+init","-XX:+PrintCommandLineFlags","-jar","/app/ktor-server.jar"]
+COPY --from=build /home/gradle/src/build/libs/*.jar /app/ktor-docker-sample.jar
+ENTRYPOINT ["java","-jar","/app/ktor-docker-sample.jar"]
